Adjustment: Fix footer watermark spacing issue
Addressed an issue in which a white space would persist between the footer and the bottom of the viewport

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -49,6 +49,11 @@ a.footer__link {
   text-align: right;
 }
 
+.footer__watermark {
+  margin: 0;
+  padding: 0 0 15px 0;
+}
+
 @media screen and (max-width: 600px) {
   .footer__menu {
     flex-direction: column;
